--- a/_pages/resume/index.html
+++ b/_pages/resume/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en" style="width:100%; height:100%;">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
-</head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/venkataakhilguntur/venkataakhilguntur.github.io/blob/master/resume/_Resume__VenkataAkhil_.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
-</html>
+<iframe
+    src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://github.com/venkataakhilguntur/venkataakhilguntur.github.io/blob/master/resume/_Resume__VenkataAkhil_.pdf#toolbar=0&scrollbar=0"
+    frameBorder="0"
+    scrolling="auto"
+    height="100%"
+    width="100%"
+></iframe>
+
+
+
