--- a/_pages/resume/index.html
+++ b/_pages/resume/index.html
@@ -1,10 +1,5 @@
-<iframe
-    src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://github.com/venkataakhilguntur/venkataakhilguntur.github.io/blob/master/resume/_Resume__VenkataAkhil_.pdf#toolbar=0&scrollbar=0"
-    frameBorder="0"
-    scrolling="auto"
-    height="100%"
-    width="100%"
-></iframe>
+ <embed src="https://github.com/venkataakhilguntur/venkataakhilguntur.github.io/blob/master/resume/_Resume__VenkataAkhil_.pdf" width="100%" height="850px"/>
+
 
 
 
